k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudedu-services
  labels:
    name: cloudedu-services
    project: cloudedu
    environment: production
